# DLCV-Chess

./: .gitignore  README.md  client_secrets.json  config.json  finetune.sh  inspect_pickle.sh  preprocess.sh  pyproject.toml  submit_job.sh  test_real.sh  train_model.sh
archive/: board_detection.py  utils.py
bash_scripts/: finetune.sh  preprocess.sh  train_model.sh
data/: FENgen (1).ipynb  FENgen.ipynb  dataprocessing.ipynb  eval_cvchess.py  generate_prototype_annotations.ipynb  prototype_annotations.json
documentation/: before_you_commit.md  chess_predictor_exe.md  dependency_management.md  remote_connection.md
scripts/: annotate_images.py  annotation.py  board_detection.py  build_dataset.py  build_finetune_dataset.py  build_pretrain_dataset.py  clean_dataset.py  eval.py  unity.py  utils.py  utils_chess_cv.py  visualization.py
src/: backend_wrapper.py  chess (3).ipynb  chess (5).ipynb  chess_prediction_from_exe.py  chess_predictor_v1.py  chess_predictor_v2.py  debug_inference.py  eval_cvchess.ipynb  export_to_onnx.py  final_notebook.ipynb  finetune.py  inspect_ground_truth.py  models.py  run_evaluation.py  test.py  test_real.py  train_and_eval.py  train_model.py
src/app/: chess_predictor.py  chess_predictor_v2.py  compare_inference.py  debug_inference.py  exe_test.py  export_to_onnx.py  test.py
src/evaluation/: eval.py  evaluation.ipynb
src/utils/: dataset.py  generate_config.py  inspect_pickle.py  models.py  preprocess.py  update_pickle.py
