[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "oldi", email = "oldenburgermarkus@gmail.com"},
    {name = "Miles Lenz", email = "miles@lenz-be.de"},
]
package-mode = false
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "numpy (>=2.3.0)",
    "torch (>=2.9.1,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "opencv-python (>=4.12.0.88,<5.0.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "scipy (>=1.17.0,<2.0.0)",
    "rembg[cpu] (>=2.0.72,<3.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)",
    "ipywidgets (>=8.1.8,<9.0.0)",
    "shapely (>=2.1.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
