[project]
name = "src"
version = "0.1.0"
description = "Chess CNN Project"
authors = [
    {name = "oldi", email = "oldenburgermarkus@gmail.com"},
    {name = "Miles Lenz", email = "miles@lenz-be.de"},
]
readme = "README.md"
requires-python = ">=3.11,<3.15"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
numpy = ">=2.3.0"
matplotlib = ">=3.10.8,<4.0.0"
scikit-learn = ">=1.8.0,<2.0.0"
optuna = ">=4.6.0,<5.0.0"
pydrive2 = ">=1.21.3,<2.0.0"
opencv-python = ">=4.12.0.88,<5.0.0.0"
seaborn = "^0.13.2"
ipykernel = ">=7.1.0,<8.0.0"
scipy = ">=1.17.0,<2.0.0"
rembg = { extras = ["cpu"], version = ">=2.0.72,<3.0.0" }
ipywidgets = ">=8.1.8,<9.0.0"
shapely = ">=2.1.2,<3.0.0"

torch = [
    { version = "2.5.1", source = "pytorch-gpu", markers = "sys_platform == 'win32'" },
    { version = "2.5.1", source = "pypi", markers = "sys_platform != 'win32'" }
]
torchvision = [
    { version = "0.20.1", source = "pytorch-gpu", markers = "sys_platform == 'win32'" },
    { version = "0.20.1", source = "pypi", markers = "sys_platform != 'win32'" }
]

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

[dependency-groups]
dev = [
    "pyinstaller (>=6.18.0,<7.0.0)",
    "ruff (>=0.15.0,<0.16.0)"
]